# open-audio-pipeline

./: README.md  pyproject.toml
audio_pipeline/: __init__.py  config.py  pipeline.py  runner.py  text.py  types.py
audio_pipeline/datasets/: __init__.py  emilia.py  wenetspeech.py
audio_pipeline/ops/: __init__.py  aligner.py  asr_wer.py  audiobox.py  basic.py  diarization.py  pause.py  punct.py  tn.py  trim.py
configs/: emilia.yaml  wenetspeech.yaml
pipelines/: run_emilia.py  run_wenetspeech.py
scripts/: launch_workers.sh
tools/: preview_server.py  upload_hf.py
